fix menu small height wrap

--- a/css/style.css
+++ b/css/style.css
@@ -1583,15 +1583,15 @@ footer {
         position: fixed;
         top: 0;
         right: calc(-1 * var(--_menu-width) - 100lvh * tan(var(--content-skew)) / 2);
-        width: var(--_menu-width);
         height: 100%;
-        padding: 2rem calc((var(--_menu-width) - var(--_menu-a-width)) / 1.8);
+        padding: 2rem 4rem 2rem 3rem;
         background-color: var(--main-bg-color);
         border-left: 0.1875rem solid var(--main-color);
         transform: skewX(var(--block-skew));
         transition: 0.3s;
 
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
         align-items: end;
@@ -1774,5 +1774,74 @@ footer {
 
     .glf-slider-text {
         font-size: 1.125rem !important;
+    }
+}
+
+.nav-l {
+    position: fixed;
+    top: 50dvh;
+    right: 0;
+    translate: 0 -50%;
+
+
+    & ul {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+    }
+
+    & a {
+        text-decoration: none;
+        cursor: pointer;
+        
+        display: flex;
+        align-items: center;
+
+        & > * {transition: 0.08s;}
+        
+        &:hover {
+            & div {
+                scale: 1.03;
+                translate: 0.75rem -0.0675rem;
+                box-shadow: 0.375rem 0.3125rem var(--main-shadow-color);
+            }
+
+            & span {
+                translate: -0.25rem 0;
+                font-size: 1.5rem;
+            }
+            
+        }
+
+        &:active {
+            & div {
+                translate: 0.625rem -0.0675rem;
+            }
+        }
+    }
+
+    & span {
+        font-size: 1.25rem;
+        user-select: none;
+    }
+
+    & div {
+        --_tag-height: 2.5rem;
+        width: 3.5rem;
+        height: var(--_tag-height);
+        background-color: var(--main-bg-color);
+        padding: 0.5rem;
+        border: 0.125rem solid var(--main-color);
+        border-radius: 0.25rem;
+        box-shadow: 0.1875rem 0.1875rem var(--main-shadow-color);
+        translate: 1rem 0;
+
+        display: flex;
+        align-items: center;
+    }
+
+    & svg {
+        height: calc(var(--_tag-height) * 0.55);
     }
 }
